--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ build*
 */.idea
 */cmake-build-debug
 */CMakeLists.txt.user
+*/CMakeFiles
+*/cmake_install.cmake
+*/CMakeCache.txt
+*/Makefile
+/ex7/sequentialite2_tests
